change the welcome.html emplacement

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>If you are using a <span class="key-note">smartphone</span>, you can use the <span class="key-note">buttons</span> on the screen.</p>
         </div>
         <div class="button-container">
-            <button><a href="welco.html">Start</a></button>
+            <button><a href="otherpage/welco.html">Start</a></button>
         </div>
     </body>
 </html>
