--- a/otherpage/welco.html
+++ b/otherpage/welco.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFO GAME</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="../style/main.css">
 </head>
 <body>
     <canvas id="mainGame"></canvas>
@@ -13,8 +13,8 @@
         <button id="toLeft" class="btn toLeft">==></button>
         <button id="restart" class="btn restart">R</button>
     </div>
-    <img src="./images/enemy.png" alt="spider" id="spider">
-    <img src="./images/myBestUfo.png" alt="Me" id="me" style="display: none;">
-    <script src="script/code.js"></script>
+    <img src="../images/enemy.png" alt="spider" id="spider">
+    <img src="../images/myBestUfo.png" alt="Me" id="me" style="display: none;">
+    <script src="../script/code.js"></script>
 </body>
 </html>
